[project]
name = "caul"
version = "0.1.0"
description = "Python implementation of an ASR service"
requires-python = "<=3.10.19, >=3.10.0"
dependencies = [
    "nemo-toolkit[asr]",
    "torch>=2.9.1",
    "numpy",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1"
]
[build-system]
requires = ["uv_build >= 0.9.22, <0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring"
]

[tool.pylint.main]
fail-under = 8.89

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = ["sys.exit", "argparse.parse_error"]

[tool.pylint.similarities]
# Docstrings are removed from the similarity computation
ignore-docstrings = true
# Comments are removed from the similarity computation
ignore-comments = true

[tool.black]
target-version = ["py310"]
