[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[project]
name = "caul"
dynamic = ["version"]
description = "Python implementation of an ASR service"
requires-python = ">=3.11.0, <=3.14.0"
dependencies = [
    "nemo-toolkit[asr]",
    "torch>=2.10.0",
    "numpy==2.3.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.9.1",
    "librosa>=0.11.0",
    "ml-dtypes>=0.5",
    "kaldialign>=0.9.3",
]
authors = [
    {name = "Lion Summerbell", email = "lsummerbell@icij.org"}
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" }
]
torchaudio = [
  { index = "pytorch-cpu" }
]
torchcodec = [
  { index = "pytorch-cpu" }
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring"
]

[tool.pylint.main]
fail-under = 8.89

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = ["sys.exit", "argparse.parse_error"]

[tool.pylint.similarities]
# Docstrings are removed from the similarity computation
ignore-docstrings = true
# Comments are removed from the similarity computation
ignore-comments = true

[tool.black]
target-version = ["py310"]
