[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["caul_core"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[project]
name = "caul-core"
dynamic = ["version"]
description = "core objects for caul ASR"
authors = [
    {name = "Lion Summerbell", email = "lsummerbell@icij.org"}
]
readme = "README.md"
requires-python = ">=3.11.0, <3.14.0"
dependencies = [
    "icij-common~=0.8.1",
    "pydantic-extra-types[pycountry]~=2.11",
]

[tool.uv]
package = true