[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["caul"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[project]
name = "caul"
dynamic = ["version"]
description = "Python implementation of an ASR service"
authors = [
    {name = "Lion Summerbell", email = "lsummerbell@icij.org"}
]
requires-python = ">=3.11.0, <3.14.0"
dependencies = [
    "icij-common~=0.8.1",
    "kaldialign~=0.9",
    "langcodes~=3.5",
    "librosa>=0.10.1,<0.12",
    "numpy~=2.3",
    "pydantic-extra-types[pycountry]~=2.11",
    "typer~=0.24",
    "huggingface-hub~=1.11",
    "caul-core~=0.1.0",
]

[project.scripts]
caul = "caul.__main__:main"

[project.optional-dependencies]
preprocessing = [
    "torchcodec>=0.10.0,<0.12",  # pulls in torch automatically so we've made it optional for a base install
]
nemo = [
    "nemo-toolkit[asr]~=2.7",
    "torch~=2.10",
]
pyannote = [
    "pyannote-audio~=4.0",
    "torchaudio~=2.10",
]
fireredasr2 = [
    "fireredasr2s",
    "kaldi-native-fbank~=1.22",
    "torchaudio~=2.10",
]
faster_whisper = [
    "faster_whisper~=1.2"
]
# TODO: delete me at the next major
huggingface_hub = [
    "huggingface-hub~=1.11",
]

# Nemo 2.7.2 has a very tight transformers version range (>=4.57.0,<4.58.dev0) which
# conflicts with fireredasr2s. Pin the version from fireredasr2s here, since this throws
# no errors with Nemo
[tool.uv]
package = true
override-dependencies = [
  "transformers==5.1.0",
  "kaldialign==0.9.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" }
]
torchaudio = [
  { index = "pytorch-cpu" }
]
torchcodec = [
  { index = "pytorch-cpu" }
]
fireredasr2s = [
    { git = "https://github.com/FireRedTeam/FireRedASR2S.git" }
]
caul-core = { path = "../caul-core", editable = true }


[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "nest-asyncio>=1.6.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.main]
fail-under = 8.89

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = ["sys.exit", "argparse.parse_error"]

[tool.pylint.similarities]
# Docstrings are removed from the similarity computation
ignore-docstrings = true
# Comments are removed from the similarity computation
ignore-comments = true

[tool.black]
target-version = ["py310"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring live models and infrastructure",
    "no_ci: test which are too slow to run in the CI",
    "integration: integration tests that download and run real ASR models (slow)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
